# duneanasel

./: CMakeLists.txt
duneanasel/fd/atmospheric/: Selections.h
duneanasel/fd/beam/: Selections.h
duneanasel/nd/: Selections.h
duneanasel/nd/ndlar/: Selections.h
examples/sample_separation/: CMakeLists.txt  NDLAr_NumuCCContained_LongestTrack.cxx  separate_NDLAr_samples.cxx
examples/user_project/: CMakeLists.txt
macros/cut_optimization/fd/: VDFDToySelections.ipynb
